--- a/redução_magnetica_IGRF_e_variacao_diurna.ipynb
+++ b/redução_magnetica_IGRF_e_variacao_diurna.ipynb
@@ -20,7 +20,7 @@
     "id": "Qp59RjnnIx_I"
    },
    "source": [
-    "## Modelando odipolo magnético"
+    "## Modelando o dipolo magnético"
    ]
   },
   {
@@ -219,9 +219,9 @@
    "source": [
     "## Simulação da aquisição. Dados em função do tempo\n",
     "\n",
-    "> $B_{móvel} = B_{regional} + B_{dipolo}  + B_{variaçãoDiurna}$\n",
+    "> $B_{movel} = B_{regional} + B_{dipolo}  + B_{variacaoDiurna}$\n",
     "\n",
-    "> $B_{base} = B_{regional} + B_{variaçãoDiurna}$"
+    "> $B_{base} = B_{regional} + B_{variacaoDiurna}$"
    ]
   },
   {
@@ -357,7 +357,7 @@
    "source": [
     "## Redução da Variação Diurna\n",
     "\n",
-    "> $B_{reduçãoVariaçãoDiurna} = B_{móvel} - {\\Delta} = B_{movel} - (B_{base} - B_{mediaMensal})$"
+    "> $B_{reducaoVariacaoDiurna} = B_{movel} - {\\Delta} = B_{movel} - (B_{base} - B_{mediaMensal})$"
    ]
   },
   {
@@ -423,7 +423,7 @@
    "source": [
     "## Redução do campo geomagnético utilizando IGRF\n",
     "\n",
-    "> $B_{reduçãoIGRF} = B_{móvel} - B_{IGRF}(x,y)$"
+    "> $B_{reducaoIGRF} = B_{movel} - B_{IGRF}(x,y)$"
    ]
   },
   {
